src/parser/tests/snapshots/parser_test__parser__tests__lexer__lexer_errors@invalid_string.txt.snap
---
source: src/parser/tests/lexer.rs
assertion_line: 19
expression: res.unwrap_err()
input_file: src/parser/tests/lexer_inputs/errors/invalid_string.txt

---
Error {
    kind: SyntaxError,
    message: "String opened with `\"` is missing its closing `\"`",
    filename: None,
    span: Some(
         @ 1:3-1:3 (3..3),
    ),
    source: None,
    labels: [],
}
