src/parser/tests/snapshots/parser_test__parser__tests__lexer__lexer_errors@unclosed_comment.txt.snap
---
source: src/parser/tests/lexer.rs
assertion_line: 19
expression: res.unwrap_err()
input_file: src/parser/tests/lexer_inputs/errors/unclosed_comment.txt

---
Error {
    kind: SyntaxError,
    message: "Closing comment tag `#}` not found",
    filename: None,
    span: Some(
         @ 1:0-1:2 (0..2),
    ),
    source: None,
    labels: [],
}
