src/parser/tests/snapshots/parser_test__parser__tests__lexer__lexer_errors@unexpected_character.txt.snap
---
source: src/parser/tests/lexer.rs
assertion_line: 19
expression: res.unwrap_err()
input_file: src/parser/tests/lexer_inputs/errors/unexpected_character.txt

---
Error {
    kind: SyntaxError,
    message: "Unexpected character",
    filename: None,
    span: Some(
         @ 1:3-1:3 (3..3),
    ),
    source: None,
    labels: [],
}
