src/parser/tests/snapshots/parser_test__parser__tests__lexer__lexer_ok@basic.txt.snap
---
source: src/parser/tests/lexer.rs
assertion_line: 9
expression: "&tokens"
input_file: src/parser/tests/lexer_inputs/success/basic.txt

---
[
    CONTENT("Hello "),
    VARIABLE_START(false),
    IDENT(username),
    VARIABLE_END(false),
    CONTENT(", {welcome}."),
]
