src/parser/tests/snapshots/parser_test__parser__tests__lexer__lexer_ok@literals.txt.snap
---
source: src/parser/tests/lexer.rs
assertion_line: 9
expression: "&tokens"
input_file: src/parser/tests/lexer_inputs/success/literals.txt

---
[
    VARIABLE_START(false),
    STRING("hello"),
    VARIABLE_END(false),
    CONTENT("\n"),
    VARIABLE_START(false),
    STRING("hello"),
    VARIABLE_END(false),
    CONTENT("\n"),
    VARIABLE_START(false),
    STRING("hello"),
    VARIABLE_END(false),
    CONTENT("\n"),
    VARIABLE_START(false),
    INTEGER(1),
    VARIABLE_END(false),
    CONTENT("\n"),
    VARIABLE_START(false),
    FLOAT(1.0),
    VARIABLE_END(false),
    CONTENT("\n"),
    VARIABLE_START(false),
    LEFT_BRACKET,
    INTEGER(1),
    COMMA,
    INTEGER(2),
    COMMA,
    INTEGER(3),
    RIGHT_BRACKET,
    VARIABLE_END(false),
    CONTENT("\n"),
    VARIABLE_START(false),
    IDENT(true),
    VARIABLE_END(false),
    CONTENT("\n"),
    VARIABLE_START(false),
    IDENT(false),
    VARIABLE_END(false),
    CONTENT("\n"),
    VARIABLE_START(false),
    LEFT_BRACE,
    STRING("hello"),
    COLON,
    INTEGER(1),
    COMMA,
    STRING("world"),
    COLON,
    IDENT(false),
    RIGHT_BRACE,
    VARIABLE_END(false),
    CONTENT("\n"),
    VARIABLE_START(false),
    IDENT(person),
    DOT,
    IDENT(name),
    VARIABLE_END(false),
    CONTENT("\n"),
    VARIABLE_START(false),
    IDENT(person),
    LEFT_BRACKET,
    IDENT(name),
    RIGHT_BRACKET,
    VARIABLE_END(false),
    CONTENT("\n"),
    VARIABLE_START(false),
    IDENT(person),
    LEFT_BRACKET,
    IDENT(name),
    RIGHT_BRACKET,
    DOT,
    IDENT(age),
    VARIABLE_END(false),
    CONTENT("\n"),
    VARIABLE_START(false),
    IDENT(person),
    LEFT_BRACKET,
    STRING("name"),
    RIGHT_BRACKET,
    DOT,
    IDENT(age),
    VARIABLE_END(false),
]
