src/parser/tests/snapshots/parser_test__parser__tests__lexer__lexer_ok@ops.txt.snap
---
source: src/parser/tests/lexer.rs
assertion_line: 9
expression: "&tokens"
input_file: src/parser/tests/lexer_inputs/success/ops.txt

---
[
    VARIABLE_START(false),
    INTEGER(1),
    PLUS,
    INTEGER(2),
    MUL,
    INTEGER(3),
    DIV,
    INTEGER(4),
    MOD,
    INTEGER(5),
    FLOORDIV,
    INTEGER(6),
    TILDE,
    INTEGER(7),
    GT,
    INTEGER(1),
    LTE,
    INTEGER(2),
    GTE,
    INTEGER(3),
    LT,
    INTEGER(6),
    POWER,
    INTEGER(2),
    PIPE,
    IDENT(round),
    VARIABLE_END(false),
]
