src/parser/tests/snapshots/parser_test__parser__tests__lexer__lexer_ok@raw.txt.snap
---
source: src/parser/tests/lexer.rs
expression: "&tokens"
input_file: src/parser/tests/lexer_inputs/success/raw.txt
---
[
    CONTENT("Hello"),
    CONTENT("Some ignored {{ content }}  {% if true %} hello {%"),
    CONTENT("World\n\nInline as well "),
    CONTENT(""),
    CONTENT("\n"),
]
