src/parser/tests/snapshots/parser_test__parser__tests__lexer__lexer_ok@tags.txt.snap
---
source: src/parser/tests/lexer.rs
assertion_line: 9
expression: "&tokens"
input_file: src/parser/tests/lexer_inputs/success/tags.txt

---
[
    TAG_START(false),
    IDENT(for),
    IDENT(i),
    IDENT(in),
    IDENT(range),
    LEFT_PAREN,
    IDENT(end),
    ASSIGN,
    INTEGER(10),
    RIGHT_PAREN,
    TAG_END(false),
    VARIABLE_START(false),
    IDENT(i),
    VARIABLE_END(false),
    TAG_START(false),
    IDENT(endfor),
    TAG_END(false),
    CONTENT("\n"),
    TAG_START(false),
    IDENT(filter),
    IDENT(upper),
    TAG_END(false),
    CONTENT("hello"),
    TAG_START(false),
    IDENT(endfilter),
    TAG_END(false),
    CONTENT("\n"),
    TAG_START(false),
    IDENT(macro),
    COLON,
    COLON,
    IDENT(call),
    LEFT_PAREN,
    IDENT(arg),
    ASSIGN,
    STRING("ho"),
    RIGHT_PAREN,
    TAG_END(false),
]
