src/parser/tests/snapshots/parser_test__parser__tests__lexer__lexer_ok@ws.txt.snap
---
source: src/parser/tests/lexer.rs
assertion_line: 9
expression: "&tokens"
input_file: src/parser/tests/lexer_inputs/success/ws.txt

---
[
    CONTENT("Hello"),
    VARIABLE_START(true),
    INTEGER(1),
    VARIABLE_END(true),
    CONTENT("ho"),
    CONTENT(""),
    CONTENT(""),
]
